--- a/08-Kubernetes/wordpress/swarm/docker-compose.yml
+++ b/08-Kubernetes/wordpress/swarm/docker-compose.yml
@@ -19,6 +19,10 @@ services:
      depends_on:
        - db
      image: wordpress:latest
+     secrets:      
+      - db_dba_password
+     volumes:
+       - web_data:/var/www/html
      ports:
        - "8000:80"
      restart: always
@@ -36,3 +40,4 @@ secrets:
 
 volumes:
   db_data: {}
+  web_data: {}
