--- a/08-Kubernetes/wordpress/k8s/k8s-deployment.yaml
+++ b/08-Kubernetes/wordpress/k8s/k8s-deployment.yaml
@@ -92,6 +92,21 @@ spec:
   type: NodePort
 ---
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: wp-pv-volume
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/mnt/data"
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: wp-pv-claim
